@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2006,v 1.860 2006/07/30 23:13:47 taca Exp $
+$NetBSD: CHANGES-2006,v 1.861 2006/07/31 00:17:25 reinoud Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -3606,3 +3606,5 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated www/apache to 1.3.27 [jdolecek 2006-07-30]
 	Updated www/ap-ssl to 2.8.28 [jdolecek 2006-07-30]
 	Updated lang/ruby18-base to 1.8.4nb2 [taca 2006-07-30]
+	Updated misc/udfclient to 0.5.2 [reinoud 2006-07-31]
+
